--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -49,7 +49,17 @@ section {
     margin: 40px 0 0 0;
 }
 
-nav a, p a {
+nav a {
+    color: $black;
+    text-decoration: none;  
+    border-bottom: 0px solid $red;
+}
+
+img {
+    max-width: 780px;
+}
+
+nav a.selected, p a {
     color: $black;
     text-decoration: none;
     border-bottom: 3px solid $red;
